[metadata]
name = connorama
version = 0.0.1
author = Connor Stott
author_email = connorbstott@gmail.com
description = colours for python terminal
long_description = file: README.md
long_descritpion_content_type = text/markdown
url = https://github.com/connorstott/connorama
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Indepenent

[options]
packages = find:
python_requires = >3.0
include_package_data = False